<resources>
    <string name="app_name">ABODE</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello new Request fragment</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign UP</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="thank_you">Thank You!</string>
    <string name="confirmation">Confirmation</string>
    <string name="amount_paid">Amount Paid</string>
    <string name="payment_history">Payment History</string>
    <string name="building_resources">Building Resources</string>
    <string name="resources">Resources</string>
    <string name="paypal_button">Pay with PayPal</string>
    <string name="current_balance_due_1_200">Current Balance Due: $1,200</string>
    <string name="click_here_for_lease_agreement">Click here for lease agreement</string>
    <string name="documents">Documents</string>
    <string name="click_here_to_submit_a_request">Click here to submit a request</string>
    <string name="maintenance_requests">Maintenance Requests</string>
    <string name="previous_payment_received_1_200">Previous payment received:$1,200</string>
    <string name="payments">Payments</string>
    <string name="subject_title">Subject Title</string>
    <string name="urgent">Urgent</string>
    <string name="moderate">Moderate</string>
    <string name="priority_level">Priority Level:</string>
    <string name="date_requested">Date Requested:</string>
    <string name="none">None</string>
    <string name="dashboard">DashBoard</string>
    <string name="payment">Payment</string>
    <string name="maintenance">Maintenance</string>
    <string name="pay">Pay</string>
    <string name="validating_email"><![CDATA[^[a-zA-Z0-9#_~!$&\'()*+,;=:.\"(),:;<>@\\[\\]\\\\]+@[a-zA-Z0-9-]+(\\.[a-zA-Z0-9-]+)*$]]></string>
    <string name="apt_number">Apt Number</string>
    <string name="priority">Priority</string>
    <string name="status">Status</string>



    <string name="docs">Docs</string>
    <string name="pay_now">PAY NOW</string>
    <string name="enter_payment_amount">Enter Payment Amount</string>
    <string name="_600">$600</string>
    <string name="balance_due">Balance Due :</string>
    <string name="current_balance_due_may_1st_1_200">Current Balance Due May 1st: $1,200</string>
    <string name="previous_payment_received_april_1st_1_200">Previous Payment Received April 1st: $1,200</string>
    <string name="view_pending_tickets">View Pending Tickets</string>
    <string name="view_scheduled_tickets">View Scheduled Tickets</string>


    <string-array name="location_options">
        <item>Bathroom</item>
        <item>Kitchen</item>
        <item>Living Room</item>
        <item>Bedroom</item>
        <item>Other</item>
    </string-array>


</resources>
