<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:id="@+id/tenants_requests_details">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tenant_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:hint="Tenant's Name"/>

            <TextView
                android:id="@+id/tenants_apt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:hint="Apt #"/>

        </LinearLayout>

        <TextView
            android:id="@+id/subject_title_view"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/subject_title"
            android:background="@color/transparent"
            android:elevation="2dp"/>

        <TextView
            android:id="@+id/priority_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/priority_level" />

        <RadioGroup
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/radio_priority"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_urgent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/urgent"/>

            <RadioButton
                android:id="@+id/radio_moderate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/moderate"/>

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/repair_location_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:layout_weight="1"
                android:text="Location: "/>
            <Spinner
                android:id="@+id/location_spinner"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"/>
        </LinearLayout>

        <TextView
            android:id="@+id/repair_description_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Description"/>

        <TextView
            android:id="@+id/user_description_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|start"
            android:background="@color/transparent"
            android:hint="Hello"
            android:ems="10"
            android:lines="6"
            android:maxLength="140"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/add_photo_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                ads:srcCompat="@drawable/ic_photo_camera_black_24dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/image_request_rv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </android.support.v7.widget.RecyclerView>

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/schedule_request_button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Schedule"
            android:background="@drawable/selector"/>

    </LinearLayout>

</FrameLayout>