<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="#F0F0F0"
    android:clickable="true"
    android:id="@+id/tenants_requests_details">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="15dp"
        android:layout_marginBottom="10dp"
        ads:layout_constraintTop_toTopOf="parent"
        ads:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/usernameWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            ads:layout_constraintBottom_toTopOf="@id/above_priority_view"
            ads:layout_constraintEnd_toEndOf="parent"
            ads:layout_constraintStart_toStartOf="parent"
            ads:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/subject_title_view"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/transparent"
                android:elevation="2dp"
                android:hint="@string/subject_title"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:textColor="#000000"
                android:textSize="17sp" />

        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/light_gray"/>

        <TextView
            android:id="@+id/priority_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="15sp"
            android:elevation="2dp"
            android:text="priority:" />

        <RadioGroup
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="5dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:id="@+id/radio_priority"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_urgent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/urgent"/>

            <RadioButton
                android:id="@+id/radio_moderate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/moderate"/>

        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/light_gray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:paddingBottom="5sp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:elevation="2dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/repair_location_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="15sp"
                android:elevation="2dp"
                android:text="location: "/>

            <Spinner
                android:id="@+id/location_spinner"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/light_gray"/>


        <EditText
            android:id="@+id/user_description_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5sp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:hint="Description:"
            android:gravity="top|start"
            android:ems="10"
            android:lines="5"
            android:textColor="#000000"
            android:background="@color/transparent"
            android:textSize="17sp"
            android:maxLength="140"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/light_gray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/add_photo_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                ads:srcCompat="@drawable/ic_photo_camera_black_24dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/image_request_rv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="8dp"
                    android:orientation="horizontal"
                    android:scrollbars="horizontal"
                    app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                    android:layout_marginStart="8dp">

                </android.support.v7.widget.RecyclerView>

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/light_gray"/>

        <Button
            android:id="@+id/submit_request_button"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:textColor="@color/white"
            android:text="Submit"
            android:background="@drawable/selector"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>